--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Cultural Council
     <link rel="stylesheet" href="../css/navbar.css">
 
     <script src="https://use.fontawesome.com/4a90801464.js"></script>
-
+    <link rel="shortcut icon" href="../img/culti_logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -29,9 +29,10 @@ title: Cultural Council
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
+ 
+    <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
 
-
-
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
