--- a/feedback.html
+++ b/feedback.html
@@ -19,7 +19,7 @@ title: Feedback
     <link rel="stylesheet" href="css/main.css">
 
     <script src="https://use.fontawesome.com/4a90801464.js"></script>
-
+    <link rel="shortcut icon" href="../img/culti_logo.png" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
