--- a/index_copy.html
+++ b/index_copy.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
     integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
-
+    <link rel="shortcut icon" href="../img/culti_logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="../css/index.css">
 
