--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Cultural Council
     <link rel="stylesheet" href="../css/navbar.css">
 
     <script src="https://use.fontawesome.com/4a90801464.js"></script>
-
+    <link rel="shortcut icon" href="../img/culti_logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
